Important change: Enemy projectile damage fix

-Fixed an issue where all spooky mod enemy and boss projectile damage was being scaled way higher than they normally should be 
-This was a result of spooky mod not accounting for a thing in terraria where hostile projectile damage is scaled up 2x more than it should, which is accounted for in vanilla but wasn't in spooky mod
-This change basically completely rebalances all enemy projectile damage and all enemy projectile damage should now be more in-line with vanilla balance
-This means that all bosses and enemies who shoot projectiles in spooky mod will now deal the proper damage in all difficulties and wont do extremely high amounts of damage in higher difficulties
-Along with this change, a bunch of enemy and boss contact damage has been tweaked to be more balanced with vanilla


Other stuff:

-Added actual biome torches for every spooky mod biome
-Added flesh bolsters to the egg incursion (They make other enemies immune to damage)
-Raveyard no longer has rainbow torches as its biome torch
-Venomous spiderpoon enemy pulling no longer works on orro-boro segments, friendly critters, or target dummies
-Zomboid warlock skulls can now be destroyed by hitting them
-Spooky spirit's orbiting skulls in phase 2 can now be killed before they get shot towards the player
-Removed the second line of the disco skulls tooltip because it was a scrapped ability
-Spooky mod sofas now count as chairs and can be sat on
-Fixed dumb zomboid not spawning, and lowered its spawn rate massively
-Fixed tome of spirits spawning multiple of each ghost
-Fixed rotten gourd armor set bonus not working with melee projectiles
-Fixed spooky mod melee weapons with swing visual effects not scaling up properly when any of the melee glove accessories are worn