@@ -131,6 +131,13 @@ namespace Spooky.Content.NPCs.EggEvent
                         Gore.NewGore(NPC.GetSource_Death(), NPC.Center, new Vector2(Main.rand.Next(-12, 13), Main.rand.Next(-12, 13)), ModContent.Find<ModGore>("Spooky/FleshBolsterGore" + numGores).Type);
                     }
                 }
+
+				//spawn splatter
+				int NumProjectiles = Main.rand.Next(15, 25);
+				for (int i = 0; i < NumProjectiles; i++)
+				{
+					NPCGlobalHelper.ShootHostileProjectile(NPC, NPC.Center, new Vector2(Main.rand.Next(-12, 13), Main.rand.Next(-12, -5)), ModContent.ProjectileType<RedSplatter>(), 0, 0f);
+				}
 			}
 		}
     }
