@@ -34,7 +34,7 @@ namespace Spooky.Content.NPCs.NoseCult
 
 		public override void SetDefaults()
 		{
-			NPC.lifeMax = 300;
+			NPC.lifeMax = 370;
             NPC.damage = 35;
             NPC.defense = 15;
             NPC.width = 54;
