@@ -79,7 +79,7 @@ namespace Spooky.Content.NPCs.Quest
 
 		public override void SetDefaults()
 		{
-            NPC.lifeMax = 3650;
+            NPC.lifeMax = 3700;
             NPC.damage = 32;
 			NPC.defense = 12;
 			NPC.width = 54;
@@ -96,7 +96,7 @@ namespace Spooky.Content.NPCs.Quest
 
 		public override void ApplyDifficultyAndPlayerScaling(int numPlayers, float balance, float bossAdjustment)
 		{
-			NPC.lifeMax = (int)(NPC.lifeMax * 0.8f * bossAdjustment);
+			NPC.lifeMax = (int)(NPC.lifeMax * 0.75f * balance * bossAdjustment);
 		}
 
 		public override void SetBestiary(BestiaryDatabase database, BestiaryEntry bestiaryEntry) 
