@@ -4,7 +4,7 @@ Important change: Enemy projectile damage fix
 -This was a result of spooky mod not accounting for a thing in terraria where hostile projectile damage is scaled up 2x more than it should, which is accounted for in vanilla but wasn't in spooky mod
 -This change basically completely rebalances all enemy projectile damage and all enemy projectile damage should now be more in-line with vanilla balance
 -This means that all bosses and enemies who shoot projectiles in spooky mod will now deal the proper damage in all difficulties and wont do extremely high amounts of damage in higher difficulties
--Along with this change, a bunch of enemy and boss contact damage has been tweaked to be more balanced with vanilla
+-Along with this change, a bunch of enemy and boss contact damage and defense has been tweaked to be more balanced with vanilla
 
 
 Other stuff:
@@ -15,9 +15,14 @@ Other stuff:
 -Venomous spiderpoon enemy pulling no longer works on orro-boro segments, friendly critters, or target dummies
 -Zomboid warlock skulls can now be destroyed by hitting them
 -Spooky spirit's orbiting skulls in phase 2 can now be killed before they get shot towards the player
+-Stitches web ball projectiles now inflict slowness instead of webbed
 -Removed the second line of the disco skulls tooltip because it was a scrapped ability
 -Spooky mod sofas now count as chairs and can be sat on
+-Rarg minion now punches nearby enemies more frequently
+-Greeny minion's magic bolts now have less range
+-Fixed spooky mod bosses having improper multiplayer hp scaling
+-Fixed temple of moco enemies being a bit janky in multiplayer
 -Fixed dumb zomboid not spawning, and lowered its spawn rate massively
--Fixed tome of spirits spawning multiple of each ghost
+-Fixed tome of spirits spawning multiple of each ghost in multiplayer
 -Fixed rotten gourd armor set bonus not working with melee projectiles
 -Fixed spooky mod melee weapons with swing visual effects not scaling up properly when any of the melee glove accessories are worn
